...
  const SidebarState({
    this.localBranches = const [],
    this.remoteBranches = const [],
    this.tags = const [],
    this.stashes = const [],
    this.submodules = const [],
    this.selectedItem = const SidebarItem(label: 'Changes', type: SidebarItemType.changes),
    this.isLoading = false,
  });

  SidebarState copyWith({
    List<BranchEntity>? localBranches,
    List<BranchEntity>? remoteBranches,
...
