...
                    graphBloc.add(LoadCommitHistoryEvent(repo));
                  },
                ));
              }
              Navigator.pop(diagContext);
            },
            child: const Text('Commit'),
          ),
        ],
      ),
    );
  }
}
...
